--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
 	<meta name="theme-color" content="#FF00DE"/>
     <title>Juanito_Tutos_22_HD</title>
-    <link href="css/styles.css" rel="stylesheet">
+    <link href="stylesheets/styles.css" rel="stylesheet">
   </head>
   <body>
      
